public static class PlayerAnimationStrings
{
    public const string yVelocity = "yVelocity";
    public const string RollTrigger = "RollTrigger";
    public const string HitTrigger = "HitTrigger";
    public const string AttackTrigger = "AttackTrigger";
    public const string IsCanMove = "IsCanMove";
    public const string IsGrounded = "IsGrounded";
    public const string IsAttacking = "IsAttacking";
    public const string IsOnLadder = "IsOnLadder";
    public const string IsJumping = "IsJumping";
    public const string IsRolling = "IsRolling";
    public const string IsMovingX = "IsMovingX";
    public const string IsAlive = "IsAlive";
    public const string IsHealing = "IsHealing";
    public const string IsHealSucceeded = "IsHealSucceeded";
    public const string VampireTrigger = "VampireTrigger";
    public const string IsVampirismActive = "IsVampirismActive";
    public const string IsVampirismFinish = "IsVampirismFinish";
    public const string IsVampirismBroken = "IsVampirismBroken";

}
